# Enigma

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
example/triangles/: CMakeLists.txt
include/Enigma/: Assert.h
include/Enigma/System/: Macros.hpp
src/: Concepts.cxx  EnumUtil.cxx  Noncopyable.cxx  StringUtil.cxx
src/Graphics/: GraphicsType.cxx  GraphicsTypes.cxx
src/IO/Device/: BaseDevice.cxx
src/IO/Device/Display/: BaseDisplay.cxx  NullDisplay.cxx  Win32Display.cxx
src/Maths/: Geometry.cxx
src/Memory/: ObserverPtr.cxx
src/System/: Handle.cxx  OperatingSystem.cxx
src/System/Handle/: CoreHandle.cxx  Win32Handle.cxx
test/: CMakeLists.txt  Utility.h  main.cpp  property.h  test_enumUtil.cpp  test_stringUtil.cpp
